--- a/views/global/v_slide.ejs
+++ b/views/global/v_slide.ejs
@@ -1,19 +1,19 @@
 <div class="slideshow-container container-fluid">
 
   <div class="mySlides ">
-    <img src="/media/img/slide/slide1.jpg" style="width:100%">
+    <img src="/media/img/slide/slide1.jpg" style="width:100%; height: 75vh;">
   </div>
 
   <div class="mySlides ">
-    <img src="/media/img/slide/slide2.jpg" style="width:100%">
+    <img src="/media/img/slide/slide2.jpg" style="width:100%; height: 75vh;">
   </div>
 
   <div class="mySlides ">
-    <img src="/media/img/slide/slide3.jpg" style="width:100%">
+    <img src="/media/img/slide/slide3.jpg" style="width:100%; height: 75vh;">
   </div>
 
   <div class="mySlides ">
-    <img src="/media/img/slide/slide4.jpg" style="width:100%">
+    <img src="/media/img/slide/slide4.jpg" style="width:100%; height: 75vh;">
   </div>
 
   <!-- Next and previous buttons -->
